--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3376,9 +3376,9 @@
     <div class="_1t0jy5tw hidden"></div>
     <section>
      <div class="_vxvq8x hidden" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
        <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-       <div class="_z4lmgp">
+       <div class="contents">
         <div role="dialog" aria-label="Photo edit modal" aria-modal="true" class="modal-caption _1nvgts7s" style="position: relative;">
          <div class="_pa35zs">
           <button aria-label="Close" type="button" class="btn-close" id="close-modal-caption">
@@ -3520,9 +3520,9 @@
     <div class="_1t0jy5tw hidden add-photo-backdrop"></div>
     <section>
      <div class="_vxvq8x hidden modal-container-add-photo" data-testid="modal-container" style="align-items: center !important;">
-      <div class="_z4lmgp">
+      <div class="contents">
        <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-       <div class="_z4lmgp">
+       <div class="contents">
         <div role="dialog" aria-label="Add additional photos to your gallery" aria-modal="true" class="modal-add-photo _244p2lw" style="position: relative;">
          <div class="_pa35zs">
           <button aria-label="Close" type="button" class="btn-close" id="close-modal-add-photo">
@@ -3542,7 +3542,7 @@
           </button>
          </div>
          <div
-          class="_z4lmgp"
+          class="contents"
           style="--gp-padding-xsmallAndAbove: 24px; --gp-padding-smallAndAbove: 24px; --gp-padding-mediumAndAbove: 24px; --gp-padding-mediumPlusAndAbove: 24px; --gp-padding-largeAndAbove: 24px; --gp-padding-xlargeAndAbove: 24px;"
          >
           <div class="_10toigd">
@@ -4273,9 +4273,9 @@
     <div class="_1t0jy5tw hidden manage-backdrop"></div>
     <section>
      <div class="_vxvq8x hidden modal-container-manage" data-testid="modal-container" style="align-items: center !important;">
-      <div class="_z4lmgp">
+      <div class="contents">
        <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-       <div class="_z4lmgp">
+       <div class="contents">
         <div role="dialog" aria-label="Add additional photos to your gallery" aria-modal="true" class="modal-manage _244p2lw" style="position: relative;">
          <div class="_pa35zs">
           <button aria-label="Close" type="button" class="btn-close" id="close-modal-manage">
@@ -4295,7 +4295,7 @@
           </button>
          </div>
          <div
-          class="_z4lmgp"
+          class="contents"
           style="--gp-padding-xsmallAndAbove: 24px; --gp-padding-smallAndAbove: 24px; --gp-padding-mediumAndAbove: 24px; --gp-padding-mediumPlusAndAbove: 24px; --gp-padding-largeAndAbove: 24px; --gp-padding-xlargeAndAbove: 24px;"
          >
           <div class="_10toigd">
