--- a/help/feedback.html
+++ b/help/feedback.html
@@ -1222,9 +1222,9 @@
     <div dir="ltr">
       <section>
        <div class="_j292vx hidden" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Search help" aria-modal="true" class="modal-help _1iw81xea" style="position: relative;">
            <div class="c40xpfg dir dir-ltr" data-testid="search-bar-overlay-content">
             <span class="i772rby dir dir-ltr">
