--- a/landing-pages/covidsafety.html
+++ b/landing-pages/covidsafety.html
@@ -2534,9 +2534,9 @@
       <div class="_1t0jy5tw hidden faq-0-backdrop"></div>
       <section>
        <div class="_virdaj hidden faq-0-modal-container" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Who is required to follow the new safety and cleaning guidelines?" aria-modal="true" class="modal-faq-0 _wheg71v" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-faq-0">
@@ -2590,9 +2590,9 @@
       <div class="_1t0jy5tw hidden faq-1-backdrop"></div>
       <section>
        <div class="_virdaj hidden faq-1-modal-container" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="How do I change or cancel an existing reservation?" aria-modal="true" class="modal-faq-1 _wheg71v" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-faq-1">
@@ -2646,9 +2646,9 @@
       <div class="_1t0jy5tw hidden faq-2-backdrop"></div>
       <section>
        <div class="_virdaj hidden faq-2-modal-container" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="What COVID-19 policies have been created for Airbnb Experiences?" aria-modal="true" class="modal-faq-2 _wheg71v" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-faq-2">
@@ -2703,9 +2703,9 @@
       <div class="_1t0jy5tw hidden faq-3-backdrop"></div>
       <section>
        <div class="_virdaj hidden faq-3-modal-container" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="What kind of flexible booking options are available on Airbnb?" aria-modal="true" class="modal-faq-3 _wheg71v" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-faq-3">
