--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6707,9 +6707,9 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                             <div class="modal__backdrop"></div>
                                             <section>
                                               <div class="_vxvq8x" data-testid="modal-container" style="align-items: center!important">
-                                                <div class="_z4lmgp">
+                                                <div class="contents">
                                                   <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-                                                  <div class="_z4lmgp">
+                                                  <div class="contents">
                                                     <div role="dialog" aria-label="Log in" aria-modal="true" class="_1ucy1zjv" style="position: relative;">
                                                       <div class="modal__close _pa35zs">
                                                         <button aria-label="Close" type="button" data-button="close" class="btn-close">
@@ -10952,12 +10952,12 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
   <div dir="ltr">
     <section>
       <div class="_j292vx" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-          <div class="_z4lmgp">
+          <div class="contents">
             <div role="dialog" aria-label="Booking modal" aria-modal="true" class="_ojerypf" tabindex="-1"
               style="position: relative;">
-              <div class="_z4lmgp"
+              <div class="contents"
                 style="--gp-padding-xsmallAndAbove:24px; --gp-padding-smallAndAbove:24px; --gp-padding-mediumAndAbove:24px; --gp-padding-mediumPlusAndAbove:24px; --gp-padding-largeAndAbove:24px; --gp-padding-xlargeAndAbove:24px;">
                 <div class="_17itzz4">
                   <div class="_88xxct">
