--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -24299,9 +24299,9 @@
     <section>
       <div class="_vxvq8x hidden modal-container-msg" style="align-items: center !important;"
         data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-          <div class="_z4lmgp">
+          <div class="contents">
             <div role="dialog" aria-label="Questions about this home?" aria-modal="true" class="_244p2lw modal-msg"
               style="position: relative;">
               <div class="_pa35zs">
