--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -16512,9 +16512,9 @@
   <div class="_1t0jy5tw"></div>
   <section>
     <div class="_1361gvp" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="Select dates and guests" aria-modal="true" class="_zyit6ap"
             style="position: relative;">
             <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span
