--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -27436,9 +27436,9 @@
     <div class="_1t0jy5tw"></div>
     <section>
       <div class="_vxvq8x" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-          <div class="_z4lmgp">
+          <div class="contents">
             <div role="dialog" aria-label="Keyboard shortcuts" aria-modal="true" class="_1pusc02v"
               style="position: relative;">
               <div class="_8qxe72">
@@ -27496,9 +27496,9 @@
     <div class="_1t0jy5tw"></div>
     <section>
       <div class="_vxvq8x" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-          <div class="_z4lmgp">
+          <div class="contents">
             <div role="dialog" aria-label="Service animals" aria-modal="true" class="_1ucy1zjv"
               style="position: relative;">
               <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span
@@ -27899,9 +27899,9 @@
     <div class="_1t0jy5tw"></div>
     <section>
       <div class="_1361gvp" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-          <div class="_z4lmgp">
+          <div class="contents">
             <div role="dialog" aria-label="Select dates and guests" aria-modal="true" class="_zyit6ap"
               style="position: relative;">
               <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span
@@ -29265,9 +29265,9 @@
     <div class="_ybk1kl0 hidden"></div>
     <section>
       <div class="_g2ext hidden" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-          <div class="_z4lmgp">
+          <div class="contents">
             <div role="dialog" aria-label="Base Price Breakdown" aria-modal="true" class="modal-price-breakdown _ewwxwe"
               style="position: absolute; top: 468px; right: 606.25px; transform-origin: right top;">
               <div class="_1wv4knt">
