--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -6825,7 +6825,7 @@
                        </div>
                        <!-- sdasdas -->
                        <div
-                      class="_z4lmgp"
+                      class="contents"
                       style="--gp-padding-xsmallAndAbove: 24px; --gp-padding-smallAndAbove: 24px; --gp-padding-mediumAndAbove: 40px; --gp-padding-mediumPlusAndAbove: 24px; --gp-padding-largeAndAbove: 24px; --gp-padding-xlargeAndAbove: 24px;"
                       >
                       <!-- dof -->
