--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6608,9 +6608,9 @@
             <div class="modal__backdrop"></div>
             <section >
               <div class="_virdaj" data-testid="modal-container">
-                <div class="_z4lmgp">
+                <div class="contents">
                   <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-                  <div class="_z4lmgp">
+                  <div class="contents">
                     <div role="dialog" aria-label="How do you want to share?" aria-modal="true" class="_1ucy1zjv"
                       style="position: relative;">
                       
@@ -6696,9 +6696,9 @@
             <div class="modal__backdrop"></div>
             <section>
               <div class="_vxvq8x" data-testid="modal-container">
-                <div class="_z4lmgp">
+                <div class="contents">
                   <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-                  <div class="_z4lmgp">
+                  <div class="contents">
                     <div role="dialog" aria-label="Share" aria-modal="true" class="_1ucy1zjv" style="position: relative;">
                       <div class="modal__close _pa35zs">
                         <button aria-label="Close" type="button" data-button="close" class="btn-close">
@@ -6899,9 +6899,9 @@
             <div class="modal__backdrop"></div>
             <section>
               <div class="_vxvq8x" data-testid="modal-container">
-                <div class="_z4lmgp">
+                <div class="contents">
                   <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-                  <div class="_z4lmgp">
+                  <div class="contents">
                     <div role="dialog" aria-label="Share" aria-modal="true" class="_1ucy1zjv" style="position: relative;">
                       <div class="modal__close _pa35zs">
                         <button aria-label="Close" type="button" data-button="close" class="btn-close">
@@ -7214,9 +7214,9 @@
             <div class="_ybk1kl0"></div>
             <section>
               <div class="_g2ext" data-testid="modal-container">
-                <div class="_z4lmgp">
+                <div class="contents">
                   <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-                  <div class="_z4lmgp">
+                  <div class="contents">
                     <div role="dialog" aria-label="Delete this wishlist" aria-modal="true" class="_ewwxwe"
                       style="position: relative;">
 
@@ -7269,9 +7269,9 @@
             <div class="_ybk1kl0"></div>
             <section>
               <div class="_virdaj _g2ext " data-testid="modal-container" style="overflow: scroll">
-                <div class="_z4lmgp">
+                <div class="contents">
                   <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-                  <div class="_z4lmgp">
+                  <div class="contents">
                     <div role="dialog" aria-label="Dates" aria-modal="true" class="_ewwxwe"
                       style="position: absolute; top: 244px; left: 24px; transform-origin: left top;">
                       <div class="_12to336">
@@ -8017,9 +8017,9 @@
             <div class="_ybk1kl0"></div>
             <section>
               <div class="_g2ext" data-testid="modal-container">
-                <div class="_z4lmgp">
+                <div class="contents">
                   <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-                  <div class="_z4lmgp">
+                  <div class="contents">
                     <div role="dialog" aria-label="Guests" aria-modal="true" class="_ewwxwe"
                       style="position: absolute; top: 244px; left: 121.625px; transform-origin: left top;">
                       <div class="_12kfhdn">
@@ -8137,9 +8137,9 @@
   <div class="_1t0jy5tw"></div>
   <section>
     <div class="_vxvq8x" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="Dates" aria-modal="true" class="_1ucy1zjv" style="position: relative;">
             <div class="_1udzt2s">
               <header class="_1youxq0">
@@ -8921,9 +8921,9 @@
   <div class="_1t0jy5tw"></div>
   <section>
     <div class="_vxvq8x" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="Guests" aria-modal="true" class="_1ucy1zjv" style="position: relative;">
             <div class="_pa35zs"><button aria-label="Close" type="button" class="btn-close"><span class="relative"><svg
                     viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
@@ -9053,9 +9053,9 @@
   <div class="_ybk1kl0"></div>
   <section>
     <div class="_g2ext" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="Dates" aria-modal="true" class="_ewwxwe"
             style="position: absolute; top: 243.906px; left: 23.9844px; transform-origin: left top;">
             <div class="_12to336">
@@ -9788,9 +9788,9 @@
   <div class="_ybk1kl0"></div>
   <section>
     <div class="_g2ext" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="Guests" aria-modal="true" class="_ewwxwe"
             style="position: absolute; top: 243.906px; left: 99.7266px; transform-origin: left top;">
             <div class="_12kfhdn">
