--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -1843,9 +1843,9 @@
     <div class="_ybk1kl0"></div>
     <section>
       <div class="_g2ext" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-          <div class="_z4lmgp">
+          <div class="contents">
             <div role="dialog" aria-label="Translation" aria-modal="true" class="_ewwxwe"
               style="position: absolute; top: 134.609px; right: 186px; transform-origin: right top;">
               <div class="_1wv4knt"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span
@@ -1899,9 +1899,9 @@
     <div class="_1t0jy5tw"></div>
     <section>
       <div class="_vxvq8x" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-          <div class="_z4lmgp">
+          <div class="contents">
             <div role="dialog" aria-label="Translation" aria-modal="true" class="_1pusc02v" style="position: relative;">
               <div class="modal__close"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                       viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
