--- a/online-experience/dashboard.html
+++ b/online-experience/dashboard.html
@@ -1377,9 +1377,9 @@
       <div class="_1t0jy5tw hidden"></div>
       <section>
        <div class="_vxvq8x hidden" style="align-items: center !important;" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Tasks" aria-modal="true" class="modal-show-all _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-show-all">
