--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -3729,9 +3729,9 @@
       <div class="_ybk1kl0 hidden"></div>
       <section>
        <div class="_g2ext hidden" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Date range" aria-modal="true" class="_ewwxwe modal-date-range" style="position: absolute; top: 207px; left: 390.5px; transform-origin: left top;">
            <div class="_1wv4knt">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-date-range">
@@ -3791,12 +3791,12 @@
       <div class="_1t0jy5tw hidden overall-backdrop"></div>
       <section>
        <div class="_vxvq8x hidden modal-container-overall" style="align-items: center !important;" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Price or value" aria-modal="true" class="modal-overall _1ucy1zjv" style="position: relative;">
            <div
-            class="_z4lmgp"
+            class="contents"
             style="--gp-padding-xsmallAndAbove: 24px; --gp-padding-smallAndAbove: 24px; --gp-padding-mediumAndAbove: 24px; --gp-padding-mediumPlusAndAbove: 24px; --gp-padding-largeAndAbove: 24px; --gp-padding-xlargeAndAbove: 24px;"
            >
             <div class="_vrk71ar">
@@ -3860,12 +3860,12 @@
       <div class="_1t0jy5tw hidden lower-backdrop"></div>
       <section>
        <div class="_vxvq8x hidden modal-container-lower" style="align-items: center !important;" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Price was lower elsewhere" aria-modal="true" class="modal-lower _1ucy1zjv" style="position: relative;">
            <div
-            class="_z4lmgp"
+            class="contents"
             style="--gp-padding-xsmallAndAbove: 24px; --gp-padding-smallAndAbove: 24px; --gp-padding-mediumAndAbove: 24px; --gp-padding-mediumPlusAndAbove: 24px; --gp-padding-largeAndAbove: 24px; --gp-padding-xlargeAndAbove: 24px;"
            >
             <div class="_vrk71ar">
