--- a/payments/payment.html
+++ b/payments/payment.html
@@ -10905,9 +10905,9 @@ Thank you very much and we hope you enjoy your stay!</div>
       <div class="_1t0jy5tw"></div>
       <section>
         <div class="_vxvq8x" data-testid="modal-container">
-          <div class="_z4lmgp">
+          <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-            <div class="_z4lmgp">
+            <div class="contents">
               <div role="dialog" aria-label="Message the Host" aria-modal="true" class="_1ucy1zjv"
                 style="position: relative;">
                 <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span class="relative"><svg
@@ -10977,9 +10977,9 @@ Thank you very much and we hope you enjoy your stay!</div>
       <div class="_1t0jy5tw"></div>
       <section>
         <div class="_vxvq8x" data-testid="modal-container">
-          <div class="_z4lmgp">
+          <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-            <div class="_z4lmgp">
+            <div class="contents">
               <div role="dialog" aria-label="Add your profile photo" aria-modal="true" class="_1ucy1zjv"
                 style="position: relative;">
                 <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span class="relative"><svg
@@ -11041,9 +11041,9 @@ Thank you very much and we hope you enjoy your stay!</div>
       <div class="_1t0jy5tw"></div>
       <section>
         <div class="_vxvq8x" data-testid="modal-container">
-          <div class="_z4lmgp">
+          <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-            <div class="_z4lmgp">
+            <div class="contents">
               <div role="dialog" aria-label="Phone number" aria-modal="true" class="_1ucy1zjv" style="position: relative;">
                 <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span class="relative"><svg
                         viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
