--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1476,9 +1476,9 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
       <div class="_1t0jy5tw hidden options-backdrop"></div>
       <section>
        <div class="_vxvq8x hidden modal-container-options" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Add dish" aria-modal="true" class="_1ucy1zjv modal-options" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-options">
@@ -1498,7 +1498,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             </button>
            </div>
            <div
-            class="_z4lmgp"
+            class="contents"
             style="--gp-padding-xsmallAndAbove: 24px; --gp-padding-smallAndAbove: 24px; --gp-padding-mediumAndAbove: 24px; --gp-padding-mediumPlusAndAbove: 24px; --gp-padding-largeAndAbove: 24px; --gp-padding-xlargeAndAbove: 24px;"
            >
             <header class="_q8mwh4">
@@ -3807,9 +3807,9 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
       <div class="_1t0jy5tw hidden examples-backdrop"></div>
       <section>
        <div class="_vxvq8x hidden modal-container-examples" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Examples" aria-modal="true" class="modal-examples _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-examples">
@@ -3829,7 +3829,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             </button>
            </div>
            <div
-            class="_z4lmgp"
+            class="contents"
             style="--gp-padding-xsmallAndAbove: 24px; --gp-padding-smallAndAbove: 24px; --gp-padding-mediumAndAbove: 24px; --gp-padding-mediumPlusAndAbove: 24px; --gp-padding-largeAndAbove: 24px; --gp-padding-xlargeAndAbove: 24px;"
            >
             <header class="_q8mwh4">
