--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -640,9 +640,9 @@
       <div class="_ybk1kl0 hidden"></div>
       <section>
        <div class="_g2ext hidden" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Ask a Superhost" aria-modal="true" class="_5wyy9re modal-dp" style="position: absolute; top: 82px; right: 242.172px; transform-origin: right top;">
            <div class="_1wv4knt">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-dp">
@@ -848,9 +848,9 @@
       <div class="_1t0jy5tw hidden "></div>
       <section>
        <div class="_vxvq8x hidden" data-testid="modal-container">
-        <div class="_z4lmgp ">
+        <div class="contents ">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Ask a Superhost" aria-modal="true" class="modal-dp-m _iwziubj" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-dp-m">
@@ -1091,9 +1091,9 @@
       <div class="_1t0jy5tw hidden help-backdrop"></div>
       <section>
        <div class="_1p1cugo hidden" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Help" aria-modal="true" class="modal-help _o4zczix" style="position: relative;">
            <div class="_m4pg2z">
             <button aria-label="Close" type="button" class="_4ijurz" id="close-modal-help">
@@ -1194,9 +1194,9 @@
       <div class="_1t0jy5tw save-exit-backdrop hidden"></div>
       <section>
        <div class="_g2ext save-exit-modal-container hidden" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Are you sure you want to exit?" aria-modal="true" class="modal-save-exit _1m9khubh" style="position: relative;">
            <div class="_1wv4knt">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-save-exit">
@@ -1245,9 +1245,9 @@
       <div class="_1t0jy5tw hidden price-exit-backdrop"></div>
       <section>
        <div class="_g2ext hidden price-help-modal-container" data-testid="modal-container">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="How suggested prices are calculated" aria-modal="true" class="modal-price-help _1m9khubh" style="position: relative;">
            <div class="_1wv4knt">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-price-help">
