--- a/edit/title.html
+++ b/edit/title.html
@@ -726,9 +726,9 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
       <div class="_1t0jy5tw hidden example-backdrop"></div>
       <section>
        <div class="_vxvq8x hidden modal-container-example" data-testid="modal-container" style="align-items: center !important;">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Examples" aria-modal="true" class="modal-example _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-example">
@@ -748,7 +748,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
             </button>
            </div>
            <div
-            class="_z4lmgp"
+            class="contents"
             style="--gp-padding-xsmallAndAbove: 24px; --gp-padding-smallAndAbove: 24px; --gp-padding-mediumAndAbove: 24px; --gp-padding-mediumPlusAndAbove: 24px; --gp-padding-largeAndAbove: 24px; --gp-padding-xlargeAndAbove: 24px;"
            >
             <div class="_10toigd">
