--- a/landing-pages/accessibility.html
+++ b/landing-pages/accessibility.html
@@ -1242,9 +1242,9 @@
     <div class="_1t0jy5tw hidden"></div>
     <section>
      <div class="_virdaj hidden" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
        <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-       <div class="_z4lmgp">
+       <div class="contents">
         <div role="dialog" aria-label="Full list of accessibility search filters" aria-modal="true" class="modal-filter-list _dsadsad" style="position: relative;">
          <div class="_pa35zs">
           <button aria-label="Close" type="button" class="btn-close" id="close-modal-filter-list">
