--- a/submission/review.html
+++ b/submission/review.html
@@ -1457,9 +1457,9 @@
       <div class="_1t0jy5tw hidden laws-backdrop"></div>
       <section>
        <div class="_vxvq8x hidden modal-container-laws" data-testid="modal-container" style="align-items: center !important;">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Local laws" aria-modal="true" class="modal-laws _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-laws">
@@ -1513,9 +1513,9 @@
       <div class="_1t0jy5tw hidden tour-backdrop"></div>
       <section>
        <div class="_vxvq8x hidden modal-container-tour" data-testid="modal-container" style="align-items: center !important;">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Tour guiding" aria-modal="true" class="modal-tour _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-tour">
@@ -1572,9 +1572,9 @@
       <div class="_1t0jy5tw hidden animals-backdrop"></div>
       <section>
        <div class="_vxvq8x hidden modal-container-animals" data-testid="modal-container" style="align-items: center !important;">
-        <div class="_z4lmgp">
+        <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-         <div class="_z4lmgp">
+         <div class="contents">
           <div role="dialog" aria-label="Animals" aria-modal="true" class="modal-animals _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="btn-close" id="close-modal-animals">
